moved result under norm, fixed colors of norn - only overflow now, and it's red

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -109,13 +109,13 @@ p{
   max-width: 600px;
 }
 .normal{
-  background-color: greenyellow;
+  //background-color: greenyellow;
 }
 .overNorm{
   background-color: crimson;
 }
 .underNorm{
-  background-color: lightblue;
+  //background-color: lightblue;
 }
 
 ul {
